# shrinkwrap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: CLAUDE.sw.md
examples/multiple_files/: .cursorrules  AGENTS.md  CLAUDE.md  CONSOLIDATED.md
examples/single_file/: CLAUDE.md
src/shrinkwrap/: __init__.py  cli.py  compressor.py  config.py  consolidate.py  drift.py  metrics.py  parser.py  schema.py
tests/: conftest.py  test_cli.py  test_commands_config.py  test_compression_metrics.py  test_compressor.py  test_condense_inplace.py  test_config.py  test_config_cli.py  test_consolidate.py  test_consolidate_flags.py  test_coverage_gaps.py  test_drift.py  test_drift_stats.py  test_edge_cases.py  test_efficacy.py  test_parser.py  test_polish.py  test_robustness.py  test_schema.py  test_ship_readiness.py  test_strict_version.py  test_verify_upgrade.py  test_watch.py  test_watch_and_audit.py
