[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrnkwrp"
version = "0.3.3"
description = "ShrinkWrap — compress AI agent instruction files into token-optimized format"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Torin Nelson", email = "nelsontorin1@gmail.com" },
]
keywords = ["ai", "llm", "claude", "compression", "context", "instruction-files"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "mistletoe>=1.3",
  "click>=8.1",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/TORlN/shrinkwrap"
Repository = "https://github.com/TORlN/shrinkwrap"
"Bug Tracker" = "https://github.com/TORlN/shrinkwrap/issues"

[project.scripts]
shrinkwrap = "shrinkwrap.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/shrinkwrap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
